--- a/package.json
+++ b/package.json
@@ -18,15 +18,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@metamask/eslint-config": "^11.1.0",
+    "@metamask/onboarding": "^1.0.1",
+    "@react-navigation/drawer": "^6.5.7",
+    "@react-navigation/native": "^6.1.2",
+    "@walletconnect/react-native-dapp": "^1.8.0",
     "expo": "^44.0.0",
+    "expo-linear-gradient": "^12.0.1",
     "expo-status-bar": "~1.2.0",
     "native-base": "3.4.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-htmlview": "^0.16.0",
+    "react-native-reanimated": "^2.14.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "^3.18.2",
     "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-web": "0.17.1",
+    "react-native-webview": "^11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
