--- a/package.json
+++ b/package.json
@@ -18,39 +18,85 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@binance-chain/bsc-connector": "^1.0.0",
+    "@ethersproject/contracts": "^5.7.0",
     "@metamask/eslint-config": "^11.1.0",
     "@metamask/onboarding": "^1.0.1",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.5.7",
     "@react-navigation/native": "^6.1.2",
+    "@types/react-native-dotenv": "^0.2.0",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
+    "@uniswap/sdk": "^3.0.3",
     "@walletconnect/react-native-dapp": "^1.8.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.13",
+    "axios": "^1.2.2",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "css-loader": "^6.7.3",
+    "dotenv": "^16.0.3",
+    "env": "^0.0.2",
+    "eth-balance": "^0.0.5",
+    "ethers": "^5.7.2",
     "expo": "^44.0.0",
     "expo-linear-gradient": "^12.0.1",
     "expo-status-bar": "~1.2.0",
+    "formatic": "^2.2.0",
+    "js-cookie": "^3.0.1",
+    "metro-react-native-babel-preset": "^0.74.0",
     "native-base": "3.4.0",
-    "react": "17.0.1",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "17.0.1",
+    "react-icons": "^4.7.1",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "^2.8.0",
+    "react-native-cookies": "^3.3.0",
+    "react-native-dotenv": "^3.4.7",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-htmlview": "^0.16.0",
+    "react-native-radio-buttons-group": "^2.3.0",
     "react-native-reanimated": "^2.14.1",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "^3.18.2",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0",
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-walletconnect": "^0.0.1-alpha.2",
     "react-native-web": "0.17.1",
-    "react-native-webview": "^11.26.0"
+    "react-native-webview": "^11.26.0",
+    "react-redux": "7.2.8",
+    "react-router-native": "^6.6.2",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.20.12",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-dotenv": "^0.2.0",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
+    "babel-loader": "^9.1.2",
     "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "@babel/core": "^7.20.12",
+    "babel-loader": "^9.1.2"
+  },
+  "peerDependencies": {
+    "@babel/core": "^7.20.12",
+    "babel-loader": "^9.1.2"
   },
   "bugs": {
     "url": "https://github.com/GeekyAnts/nativebase-templates/issues"
   },
   "homepage": "https://github.com/GeekyAnts/nativebase-templates#readme",
-  "author": "Aditya Jamuar",
+  "author": "Markell Yager",
   "private": true
 }
