--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-dotenv": "^3.4.7",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-htmlview": "^0.16.0",
+    "react-native-numeric-input": "^1.9.1",
     "react-native-radio-buttons-group": "^2.3.0",
     "react-native-reanimated": "^2.14.1",
     "react-native-render-html": "^6.3.4",
