--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "expo-linear-gradient": "^12.0.1",
     "expo-status-bar": "~1.2.0",
     "formatic": "^2.2.0",
+    "framer-motion": "^8.5.2",
     "js-cookie": "^3.0.1",
     "metro-react-native-babel-preset": "^0.74.0",
     "native-base": "3.4.0",
